    and "duplicate".
  * Added options --terminate, --joint-termination, --set-label and
    --reset-label to plugin "merge".
  * Added options --set-label and --reset-label to plugin "mux".
  * Added options --set-label-below, --set-label-normal, --set-label-above,
    --set-label-go-below, --set-label-go-normal, --set-label-go-above to
    plugin "bitrate_monitor".

[BUG] Bug fixes:

  * Fixed an issue while reading XML files: leading and trailing spaces were
    removed by default inside all text nodes.
  * Fixed input plugin "dektec": with satellite receivers, the LNB was not
    properly enabled.
  * In input plugin "hls", the cookies which were returned by a playlist were
    not passed to the next playlist or segment download.

-------------------------------------------------------------------------------

VERSION 3.17-1189

[IMP] Improvements on existing commands and plugins:

  * In commands "tsanalyze", "tsdump", "tspsi", "tstabdump", "tstables", the
    display is now sent through a pager application (less/more) when the output
    device is a terminal. Added option --no-pager to disable this.
  * In the input plugin "hls", after loading a master playlist, if the selected
    media playlist is not found, try next one, etc.
  * Added option --evaluate-pcr-offset to plugin "pcrextract".
  * Added option --dvb-cissa to plugins "scrambler" and "descrambler".
  * Added options --pid and --tag to plugin "bitrate_monitor". The plugin can
    now also monitor the bitrate of the complete TS and can detect zero bitrate
    on the transport stream.
  * Added option --start-media-sequence to output plugin "hls".
  * Added option --pack-and-flush to "tstabcomp".
  * In various analysis commands and plugins, ATSC signalization is now known.
  * General list of improvements regarding tuners and scanning:
    - Added region-specific UHF/VHF frequency layouts in various commands and
      plugins. Added option --hf-band-region to plugins "dvb", "dektec" and