@@ -28,6 +28,7 @@
 //----------------------------------------------------------------------------
 
 #include "tsIPOutputPlugin.h"
+#include "tsSystemRandomGenerator.h"
 TSDUCK_SOURCE;
 
 // Grouping TS packets in UDP packets
@@ -48,6 +49,21 @@ ts::IPOutputPlugin::IPOutputPlugin(TSP* tsp_) :
     _tos(-1),
     _pkt_burst(DEF_PACKET_BURST),
     _enforce_burst(false),
+    _use_rtp(false),
+    _rtp_pt(RTP_PT_MP2T),
+    _rtp_fixed_sequence(false),
+    _rtp_start_sequence(0),
+    _rtp_sequence(0),
+    _rtp_fixed_ssrc(false),
+    _rtp_user_ssrc(0),
+    _rtp_ssrc(0),
+    _pcr_user_pid(PID_NULL),
+    _pcr_pid(PID_NULL),
+    _last_pcr(INVALID_PCR),
+    _last_rtp_pcr(INVALID_PCR),
+    _last_rtp_pcr_pkt(0),
+    _rtp_pcr_offset(0),
+    _pkt_count(0),
     _sock(false, *tsp_),
     _out_count(0),
     _out_buffer()
@@ -86,6 +102,31 @@ ts::IPOutputPlugin::IPOutputPlugin(TSP* tsp_) :
          u"is either \"Unicast TTL\" or \"Multicast TTL\", depending on the "
          u"destination address. Remember that the default Multicast TTL is 1 "
          u"on most systems.");
+
+    option(u"rtp", 'r');
+    help(u"rtp",
+         u"Use the Real-time Transport Protocol (RTP) in output UDP datagrams. "
+         u"By default, TS packets are sent in UDP datagrams without encapsulation.");
+
+    option(u"payload-type", 0, INTEGER, 0, 1, 0, 127);
+    help(u"payload-type",
+        u"With --rtp, specify the payload type. "
+        u"By default, use " + UString::Decimal(RTP_PT_MP2T) + u", the standard RTP type for MPEG2-TS.");
+
+    option(u"pcr-pid", 0, PIDVAL);
+    help(u"pcr-pid",
+        u"With --rtp, specify the PID containing the PCR's which are used as reference for RTP timestamps. "
+        u"By default, use the first PID containing PCR's.");
+
+    option(u"start-sequence-number", 0, UINT16);
+    help(u"start-sequence-number",
+        u"With --rtp, specify the initial sequence number. "
+        u"By default, use a random value. Do not modify unless there is a good reason to do so.");
+
+    option(u"ssrc-identifier", 0, UINT32);
+    help(u"ssrc-identifier",
+        u"With --rtp, specify the SSRC identifier. "
+        u"By default, use a random value. Do not modify unless there is a good reason to do so.");
 }
 
 
@@ -112,6 +153,13 @@ bool ts::IPOutputPlugin::getOptions()
     _tos = intValue<int>(u"tos", -1);
     _pkt_burst = intValue<size_t>(u"packet-burst", DEF_PACKET_BURST);
     _enforce_burst = present(u"enforce-burst");
+    _use_rtp = present(u"rtp");
+    _rtp_pt = intValue<uint8_t>(u"payload-type", RTP_PT_MP2T);
+    _rtp_fixed_sequence = present(u"start-sequence-number");
+    _rtp_start_sequence = intValue<uint16_t>(u"start-sequence-number");
+    _rtp_fixed_ssrc = present(u"ssrc-identifier");
+    _rtp_user_ssrc = intValue<uint32_t>(u"ssrc-identifier");
+    _pcr_user_pid = intValue<PID>(u"pcr-pid", PID_NULL);
     return true;
 }
 
@@ -142,6 +190,35 @@ bool ts::IPOutputPlugin::start()
         _out_buffer.resize(_pkt_burst);
         _out_count = 0;
     }
+
+    // Initialize RTP parameters.
+    if (_use_rtp) {
+        // Use a system PRNG. This type of RNG does not need to be seeded.
+        SystemRandomGenerator prng;
+        if (_rtp_fixed_sequence) {
+            _rtp_sequence = _rtp_start_sequence;
+        }
+        else if (!prng.readInt(_rtp_sequence)) {
+            tsp->error(u"random number generation error");
+            return false;
+        }
+        if (_rtp_fixed_ssrc) {
+            _rtp_ssrc = _rtp_user_ssrc;
+        }
+        else if (!prng.readInt(_rtp_ssrc)) {
+            tsp->error(u"random number generation error");
+            return false;
+        }
+    }
+
+    // Other states.
+    _pcr_pid = _pcr_user_pid;
+    _last_pcr = INVALID_PCR;
+    _last_rtp_pcr = 0;  // Always start timestamps at zero
+    _last_rtp_pcr_pkt = 0;
+    _rtp_pcr_offset = 0;
+    _pkt_count = 0;
+
     return true;
 }
 
@@ -180,9 +257,9 @@ bool ts::IPOutputPlugin::send(const TSPacket* pkt, size_t packet_count)
         packet_count -= count;
         _out_count += count;
 
-        // Send if the output buffer when full.
+        // Send the output buffer when full.
         if (_out_count == _pkt_burst) {
-            if (!_sock.send(_out_buffer.data(), _out_count * PKT_SIZE, *tsp)) {
+            if (!sendDatagram(_out_buffer.data(), _out_count)) {
                 return false;
             }
             _out_count = 0;
@@ -192,7 +269,7 @@ bool ts::IPOutputPlugin::send(const TSPacket* pkt, size_t packet_count)
     // Send subsequent packets from the global buffer.
     while (packet_count > min_burst) {
         size_t count = std::min(packet_count, _pkt_burst);
-        if (!_sock.send(pkt, count * PKT_SIZE, *tsp)) {
+        if (!sendDatagram(pkt, count)) {
             return false;
         }
         pkt += count;
@@ -208,4 +285,114 @@ bool ts::IPOutputPlugin::send(const TSPacket* pkt, size_t packet_count)
         _out_count = packet_count;
     }
     return true;
+}
+
+
+//----------------------------------------------------------------------------
+// Send contiguous packets in one single datagram.
+//----------------------------------------------------------------------------
+
+bool ts::IPOutputPlugin::sendDatagram(const TSPacket* pkt, size_t packet_count)
+{
+    bool status = true;
+
+    if (_use_rtp) {
+        // RTP datagram are relatively trivial to build, except the time stamp.
+        // We cannot use the wall clock time because the plugin is likely to burst its output.
+        // So, we try to synchronize RTP timestamps with PCR's from one PID.
+        // But this is not trivial since the PCR may not be accurate or may loop back.
+        // As long as the first PCR is not seen, increment timestamps from zero, using TS bitrate as reference.
+        // At the first PCR, compute the difference between the current RTP timestamp and this PCR.
+        // Then keep this difference and resynchronize at each PCR.
+        // But never jump back in RTP timestamps, only increase "more slowly" when adjusting.
+
+        // Build an RTP datagram. Use a simple RTP header without options nor extensions.
+        ByteBlock buffer(RTP_HEADER_SIZE + packet_count * PKT_SIZE);
+
+        // Build the RTP header, except the timestamp.
+        buffer[0] = 0x80;             // Version = 2, P = 0, X = 0, CC = 0
+        buffer[1] = _rtp_pt & 0x7F;   // M = 0, payload type
+        PutUInt16(&buffer[2], _rtp_sequence++);
+        PutUInt32(&buffer[8], _rtp_ssrc);
+
+        // Get current bitrate to compute timestamps.
+        const BitRate bitrate = tsp->bitrate();
+
+        // Look for a PCR in one of the packets to send.
+        // If found, we adjust this PCR for the first packet in the datagram.
+        uint64_t pcr = INVALID_PCR;
+        for (size_t i = 0; i < packet_count; i++) {
+            const bool hasPCR = pkt[i].hasPCR();
+            const PID pid = pkt[i].getPID();
+
+            // Detect PCR PID if not yet known.
+            if (hasPCR && _pcr_pid == PID_NULL) {
+                _pcr_pid = pid;
+            }
+
+            // Detect PCR presence.
+            if (hasPCR && pid == _pcr_pid) {
+                pcr = pkt[i].getPCR();
+                // If the bitrate is known and the packet containing the PCR is not the first one,
+                // compute the theoretical timestamp of the first packet in the datagram.
+                if (i > 0 && bitrate > 0) {
+                    pcr -= (i * 8 * PKT_SIZE * uint64_t(SYSTEM_CLOCK_FREQ)) / bitrate;
+                }
+                break;
+            }
+        }
+
+        // Extrapolate the RTP timestamp from the previous one, using current bitrate.
+        // This value may be replaced if a valid PCR is present in this datagram.
+        uint64_t rtp_pcr = _last_rtp_pcr;
+        if (bitrate > 0) {
+            rtp_pcr += ((_pkt_count - _last_rtp_pcr_pkt) * 8 * PKT_SIZE * uint64_t(SYSTEM_CLOCK_FREQ)) / bitrate;
+        }
+
+        // If the current datagram contains a PCR, recompute the RTP timestamp more precisely.
+        if (pcr != INVALID_PCR) {
+            if (_last_pcr == INVALID_PCR || pcr < _last_pcr) {
+                // This is the first PCR in the stream or the PCR has jumped back in the past.
+                // For this time only, we keep the extrapolated PCR.
+                // Compute the difference between PCR and RTP timestamps.
+                _rtp_pcr_offset = pcr - rtp_pcr;
+                tsp->verbose(u"RTP timestamps resynchronized with PCR PID 0x%X (%d)", {_pcr_pid, _pcr_pid});
+                tsp->debug(u"new PCR-RTP offset: %d", {_rtp_pcr_offset});
+            }
+            else {
+                // PCR are normally increasing, drop extrapolated value, resynchronize with PCR.
+                uint64_t adjusted_rtp_pcr = pcr - _rtp_pcr_offset;
+                if (adjusted_rtp_pcr <= _last_rtp_pcr) {
+                    // The adjustment would make the RTP timestamp go backward. We do not want that.
+                    // We increase the RTP timestamp "more slowly", by 25% of the extrapolated value.
+                    tsp->debug(u"RTP adjustment from PCR would step backward by %d", {((_last_rtp_pcr - adjusted_rtp_pcr) * RTP_RATE_MP2T) / SYSTEM_CLOCK_FREQ});
+                    adjusted_rtp_pcr = _last_rtp_pcr + (rtp_pcr - _last_rtp_pcr) / 4;
+                }
+                rtp_pcr = adjusted_rtp_pcr;
+            }
+
+            // Keep last PCR value.
+            _last_pcr = pcr;
+        }
+
+        // Insert the RTP timestamp in RTP clock units.
+        PutUInt32(&buffer[4], uint32_t((rtp_pcr * RTP_RATE_MP2T) / SYSTEM_CLOCK_FREQ));
+
+        // Remember position and value of last datagram.
+        _last_rtp_pcr = rtp_pcr;
+        _last_rtp_pcr_pkt = _pkt_count;
+
+        // Copy the TS packets after the RTP header and send the packets.
+        ::memcpy(buffer.data() + RTP_HEADER_SIZE, pkt, packet_count * PKT_SIZE);
+        status = _sock.send(buffer.data(), buffer.size(), *tsp);
+    }
+    else {
+        // No RTP, send TS packets directly as datagram.
+        status = _sock.send(pkt, packet_count * PKT_SIZE, *tsp);
+    }
+
+    // Count packets datagram per datagram.
+    _pkt_count += packet_count;
+
+    return status;
 }
