@@ -36,6 +36,8 @@ VERSION 3.18-1313
   * Added options --set-label-below, --set-label-normal, --set-label-above,
     --set-label-go-below, --set-label-go-normal, --set-label-go-above to
     plugin "bitrate_monitor".
+  * Added RTP support for output plugin "ip": added options --rtp,
+    --payload-type, --pcr-pid, --ssrc-identifier and --start-sequence-number.
 
 [BUG] Bug fixes:
 
